--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ scikit-learn==0.24.2
 matplotlib==3.7.5
 apache-airflow-providers-amazon==8.19.0
 apache-airflow-providers-postgres
+apache-airflow-providers-sqlite>=2.1.0
